Adding the website's fonts to the mobile look

--- a/index.html
+++ b/index.html
@@ -26,17 +26,19 @@
 	<div data-role="page" id="home">  
 		<div data-position="fixed" data-role="header" data-theme="b">  
 			<!-- <a data-icon="home" data-iconpos="notext" rel="external" href="home.html">Home</a>  --> 
-			<h1>Food Rescue Robot</h1>  
+			<h1 style="font:13px/1.5 'Trebuchet MS', Arial;">
+				Food Rescue Robot
+			</h1>  
 		</div>  
 		<div data-role="content" id="contentConfirmation" name="contentConfirmation" align="center">  
-			<h1>Log In</h1>  
+			<h1 style="color: #4a4a4a; font:30px/1.5 'Trebuchet MS', Arial;">Log In</h1>  
 			<form id="HLogin" method="POST">  
 				<div data-role="fieldcontain">  
-					<label for="url">Username:</label>  
+					<label style="color: #4a4a4a; font:15px/1.5 'Trebuchet MS', Arial;" for="url">Username:</label>  
 					<input class="required" id="Lusername" name="uid_r" value="" type="text">            
 				</div>  
 				<div data-role="fieldcontain">  
-					<label for="url">Password:</label>  
+					<label style="color: #4a4a4a; font:15px/1.5 'Trebuchet MS', Arial;" for="url">Password:</label>  
 					<input id="Lpassword" name="pwd_r" value="" type="password">            
 				</div> 
 				<div class="div_dim">
