--- a/pickupreport.html
+++ b/pickupreport.html
@@ -33,10 +33,10 @@
 <body>
 	<div data-role="page" id="pickup">  
 		<div data-position="fixed" data-role="header" data-theme="b">  
-			<a rel="external"data-icon="home" data-iconpos="notext" href="home.html">
+			<a rel="external" data-icon="home" data-iconpos="notext" href="home.html">
 				Home
 			</a>  
-			<h1>
+			<h1 style="font:13px/1.5 'Trebuchet MS', Arial;">
 				Food Rescue Robot
 			</h1> 
 			<a rel="external"data-icon="power" data-iconpos="notext" href="index.html">
@@ -44,14 +44,14 @@
 			</a>
 		</div> 
 		<h3>
-			<div style="margin: 15px; font-family: 'Corbel'; font-weight: normal; border-bottom: 1px solid #c5c5c5 !important;">
+			<div style="margin: 15px; color: #4a4a4a; font:20px/1.5 'Trebuchet MS', Arial; border-bottom: 1px solid #c5c5c5 !important;">
 				<center>
 					Edit Pick Up Report
 				</center>
 			</div>
 		</h3>
 		<div class="field_title" data-role="fieldcontain">
-			<label style="color: #DB5432;" for="name">Date:</label>
+			<label style="color: #DB5432; font:15px/1 'Trebuchet MS', Arial;" for="name">Date:</label>
 			<input class="date_picker" name="mydate" id="mydate" type="date" data-theme="b" data-role="datebox" data-options='{"mode": "flipbox"}'>
 		</div>
 
@@ -129,17 +129,17 @@
 		</div>
 
 		<div class="field_title" data-role="fieldcontain">
-			<label style="color: #DB5432; font: arial, sans-serif;" for="name">Weight:</label>
+			<label style="color: #DB5432; font: 15px/1 'Trebuchet MS', Arial;" for="name">Weight:</label>
 			<input type="text" name="name" id="name" value=""  />
 		</div>
 
 		<div class="field_title" data-role="fieldcontain">
-			<label style="color: #DB5432; font: arial, sans-serif;" for="name">Count:</label>
+			<label style="color: #DB5432; font: 15px/1 'Trebuchet MS', Arial;" for="name">Count:</label>
 			<input type="text" name="name" id="name" value=""  />
 		</div>
 
 		<div class="field_title" data-role="fieldcontain">
-			<label style="color: #DB5432; font: arial, sans-serif;" for="name">Description:</label>
+			<label style="color: #DB5432; font: 15px/1 'Trebuchet MS', Arial;" for="name">Description:</label>
 			<input type="text" name="name" id="name" value=""  />
 		</div>
 		<div class="div_dim">
@@ -169,7 +169,7 @@
 		</div>
 
 		<div class="field_title" data-role="fieldcontain">
-			<label style="color: #DB5432; font: arial, sans-serif;" for="textarea">
+			<label style="color: #DB5432; font: 15px/1 'Trebuchet MS', Arial;" for="textarea">
 				Notes:
 			</label>
 			<textarea cols="40" rows="8" name="textarea" id="textarea"></textarea>
@@ -177,7 +177,7 @@
 		</div>
 		<div class="field_title" data-role="fieldcontain">
  			<fieldset data-role="controlgroup">
-				<label style="color: #DB5432; font: arial, sans-serif;" for="checkbox-1">
+				<label style="color: #DB5432; font: 15px/1 'Trebuchet MS', Arial;" for="checkbox-1">
 					Flag for Admin:
 				</label>
 				<input type="checkbox" name="checkbox-1" id="checkbox-1" class="custom" />
