--- a/signup.html
+++ b/signup.html
@@ -23,7 +23,9 @@
 	<div data-role="page" id="home">  
 		<div data-position="fixed" data-role="header" data-theme="b">  
 			<!-- <a data-icon="home" data-iconpos="notext" rel="external" href="home.html">Home</a>  --> 
-			<h1>Food Rescue Robot</h1>  
+			<h1 style="font:13px/1.5 'Trebuchet MS', Arial;">
+				Food Rescue Robot
+			</h1>  
 		</div> 
 		<div style="margin: 15px; font-family: 'Corbel'; font-weight: normal;">
 			<h1><center>Create An Account</center></h1>
