--- a/home.html
+++ b/home.html
@@ -27,7 +27,9 @@
 	<div data-role="page" id="home">  
 		<div data-position="fixed" data-role="header" data-theme="b">  
 			<a rel="external"data-icon="home" data-iconpos="notext" href="home.html">Home</a>  
-			<h1>Food Rescue Robot</h1> 
+			<h1 style="font:13px/1.5 'Trebuchet MS', Arial;">
+				Food Rescue Robot
+			</h1> 
 
 			<a rel="external"data-icon="power" data-iconpos="notext" href="index.html">Log Out</a>
 		</div> 
