--- a/pickupreport.html
+++ b/pickupreport.html
@@ -6,21 +6,21 @@
 	<title>Boulder Food Rescue</title>
 	<link rel="stylesheet" href="themes/Bootstrap.css">
 	<link rel="stylesheet" href="themes/application.css">
+	
+	<script href="themes/js/boostrap-dropdown.js"></script>
+	<link rel="stylesheet" href="themes/css/boostrap_2-1-1.css">
+	<script href="themes/js/boostrap-dropdown_2-1-1.js"></script>
 	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.0/jquery.mobile.structure-1.4.0.min.css" />
 	<link rel="stylesheet" href="themes/jquery.mobile.icons.min.css" />
 	<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
 	<script src="http://code.jquery.com/mobile/1.4.0/jquery.mobile-1.4.0.min.js"></script>
 
 	<!-- DatePicker -->
-	<link rel="stylesheet" type="text/css" href="http://code.jquery.com/mobile/latest/jquery.mobile.min.css" />
+	<link rel="stylesheet" type="text/css" href="themes/jquery.mobile.min.css" />
+	
 	<link rel="stylesheet" type="text/css" href="http://dev.jtsage.com/cdn/datebox/latest/jqm-datebox.min.css" /> 
 
-	<!--
-		<script type="text/javascript" src="http://dev.jtsage.com/cdn/datebox/latest/jqm-datebox.core.min.js">
-		</script>
-	-->
-	<script type="text/javascript" src="themes/js/jqm-datebox.core.min.js"></script>
-
+	<script type="text/javascript" src="http://dev.jtsage.com/cdn/datebox/latest/jqm-datebox.core.min.js"></script>
 	<script type="text/javascript" src="http://dev.jtsage.com/cdn/datebox/latest/jqm-datebox.mode.flipbox.min.js"></script>
 	<script type="text/javascript" src="http://dev.jtsage.com/cdn/datebox/i18n/jquery.mobile.datebox.i18n.en_US.utf8.js"></script>
 </head>
@@ -32,7 +32,7 @@
 </style>
 <body>
 	<div data-role="page" id="pickup">  
-		<div data-position="fixed" data-role="header" data-theme="b">  
+		<div data-position="fixed" data-role="header" data-theme="a">  
 			<a rel="external"data-icon="home" data-iconpos="notext" href="home.html">
 				Home
 			</a>  
