--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 				<div class="div_dim">
 					<a rel="external" href="home.html" data-role="button" data-theme="d" data-inline="false">
 						<span class="ui-btn-inner ui-btn-corner-all">
-							
+							<span class="ext_button">
 								Sign In
-							
+							</span>
 						</span>
 					</a>
 				</div>
