Continuing to outplay. Oh wow. Those colors

--- a/pickupreport.html
+++ b/pickupreport.html
@@ -52,11 +52,11 @@
 		</h3>
 		<div class="field_title" data-role="fieldcontain">
 			<label style="color: #DB5432;" for="name">Date:</label>
-			<input class="date_picker" name="mydate" id="mydate" type="date" data-theme="b" data-role="datebox" data-options='{"mode": "flipbox"}'>
+			<input class="date_picker" name="mydate" id="mydate" type="date" data-theme="d" data-role="datebox" data-options='{"mode": "flipbox"}'>
 		</div>
 
 		<div class="div_dim">
-			<select class="drop_button" name="volunteers" id="volunteers" data-native-menu="false">
+			<select class="drop_button" name="volunteers" id="volunteers">
 				<option>Volunteer</option>
 				<option value="mon">Gretchen</option>
 				<option value="tue">Merk</option>
