Editing icon colors in header

--- a/home.html
+++ b/home.html
@@ -27,12 +27,12 @@
 <body>
 	<div data-role="page" id="home">  
 		<div data-position="fixed" data-role="header" data-theme="a">  
-			<a rel="external"data-icon="home" data-iconpos="notext" href="home.html">Home</a>  
+			<a style="background-color: rgba(75,115,51,0);" rel="external" data-icon="home" data-iconpos="notext" href="home.html">Home</a>  
 			<h1 style="font:13px/1.5 'Trebuchet MS', Arial;">
 				Food Rescue Robot
 			</h1> 
 
-			<a rel="external"data-icon="power" data-iconpos="notext" href="index.html">Log Out</a>
+			<a style="background-color: rgba(75,115,51,0);" rel="external"data-icon="power" data-iconpos="notext" href="index.html">Log Out</a>
 		</div> 
 		<div style="margin: 15px">
 			<a rel="external" href="pickupreport.html" data-role="button" data-theme="c" data-inline="false">
