--- a/signup.html
+++ b/signup.html
@@ -32,20 +32,28 @@
 				Food Rescue Robot
 			</h1>  
 		</div> 
-		<div style="margin: 15px; font-family: 'Corbel'; font-weight: normal;">
-			<h1><center>Create An Account</center></h1>
+		<div style="color: #4a4a4a; font:15px/1.5 'Trebuchet MS', Arial;">
+			<h1>
+				<center>
+					Create An Account
+				</center>
+			</h1>
 		</div>
 		<form id="HLogin" method="POST">  
 			<div style="margin: 15px;" data-role="fieldcontain">  
-				<label for="url"><center>Username:</center></label>  
-				<input class="required" id="Lusername" name="uid_r" value="" type="text">            
+				<label style="color: #4a4a4a; font:15px/1.5 'Trebuchet MS', Arial;" for="url">
+					<center>
+						Username:
+					</center>
+				</label>  
+				<input class="required" id="Lusername" name="uid_r" value="" type="text">
 			</div>  
 			<div style="margin: 15px;" data-role="fieldcontain">  
-				<label for="url"><center>Password:</center></label>  
+				<label style="color: #4a4a4a; font:15px/1.5 'Trebuchet MS', Arial;" for="url"><center>Password:</center></label>  
 				<input id="Lpassword" name="pwd_r" value="" type="password">            
 			</div>  
 			<div style="margin: 15px;" data-role="fieldcontain">  
-				<label for="url"><center>Confirm Password:</center></label>  
+				<label style="color: #4a4a4a; font:15px/1.5 'Trebuchet MS', Arial;" for="url"><center>Confirm Password:</center></label>  
 				<input id="Lpassword" name="pwd_r" value="" type="password">            
 			</div> 
 			<!-- <center><a rel="external" href="index.html" data-role="button" data-theme="b" data-inline="true">Create Account</a></center> -->
