--- a/menu.html
+++ b/menu.html
@@ -27,14 +27,19 @@
 <body>
 	<div data-role="page" id="home">  
 		<div data-position="fixed" data-role="header" data-theme="a">  
-			<a rel="external" data-icon="home" data-iconpos="notext" href="home.html">Home</a>  
+			<a style="background-color: rgba(75,115,51,0);" rel="external" data-icon="home" data-iconpos="notext" href="home.html">
+				Home
+			</a>  
 			<h1>
 				Boulder Food Rescue
 			</h1> 
 			
-				<a  rel="external" data-icon="grid" data-iconpos="notext" href="menu.html">	
-				Grid
-				</a>
+			<!-- <a  rel="external" data-icon="grid" data-iconpos="notext" href="menu.html">	
+			Grid
+			</a> -->
+			<a style="background-color: rgba(75,115,51,0);" rel="external"data-icon="power" data-iconpos="notext" href="index.html">
+				Log Out
+			</a>
 		</div> 
 		<div data-role="content" id="contentConfirmation" name="contentConfirmation" align="center">  
 			<h1>
