--- a/pickupreport.html
+++ b/pickupreport.html
@@ -33,14 +33,13 @@
 <body>
 	<div data-role="page" id="pickup">  
 		<div data-position="fixed" data-role="header" data-theme="a">  
-			<a rel="external"data-icon="home" data-iconpos="notext" href="home.html">
-
+			<a style="background-color: rgba(75,115,51,0);" rel="external"data-icon="home" data-iconpos="notext" href="home.html">
 				Home
 			</a>  
 			<h1 style="font:13px/1.5 'Trebuchet MS', Arial;">
 				Food Rescue Robot
 			</h1> 
-			<a rel="external"data-icon="power" data-iconpos="notext" href="index.html">
+			<a style="background-color: rgba(75,115,51,0);" rel="external"data-icon="power" data-iconpos="notext" href="index.html">
 				Log Out
 			</a>
 		</div> 
