testing multiple entries

--- a/pickupreport.html
+++ b/pickupreport.html
@@ -103,6 +103,20 @@
 				<option value="fri">Recipient 5</option>
 				<option value="sat">Recipient 6</option>
 				<option value="sun">Recipient 7</option>
+				<option value="sun">Recipient 7</option>
+				<option value="sun">Recipient 7</option>
+				<option value="sun">Recipient 7</option>
+				<option value="sun">Recipient 7</option>
+				<option value="sun">Recipient 7</option>
+				<option value="sun">Recipient 7</option>
+				<option value="sun">Recipient 7</option>
+				<option value="sun">Recipient 7</option>
+				<option value="sun">Recipient 7</option>
+				<option value="sun">Recipient 7</option>
+				<option value="sun">Recipient 7</option>
+				<option value="sun">Recipient 7</option>
+				<option value="sun">Recipient 7</option>
+				<option value="sun">Recipient 7</option>
 			</select>
 		</div>
 		<div class="section_div">
