--- a/forgotpassword.html
+++ b/forgotpassword.html
@@ -39,7 +39,15 @@
 				<input class="required" id="Lusername" name="uid_r" value="" type="text">            
 			</div>  
 
-			<center><a rel="external" href="index.html" data-role="button" data-theme="b" data-inline="true">Submit</a></center>
+			<div class="div_dim">
+				<a rel="external" href="index.html" data-role="button" data-theme="d" data-inline="false">
+					<span class="ui-btn-inner ui-btn-corner-all">
+						<span class="ext_button">
+						Submit
+						</span>
+					</span>
+				</a>
+			</div>
 		</form>  
 	</div>
 </body>
