--- a/pickupreport.html
+++ b/pickupreport.html
@@ -5,13 +5,16 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<title>Boulder Food Rescue</title>
 	<link rel="stylesheet" href="themes/Bootstrap.css">
+
 	<link rel="stylesheet" href="themes/application.css">
 	
-	<script href="themes/js/boostrap-dropdown.js"></script>
+	<!-- <script href="themes/js/boostrap-dropdown.js"></script>
 	<link rel="stylesheet" href="themes/css/boostrap_2-1-1.css">
-	<script href="themes/js/boostrap-dropdown_2-1-1.js"></script>
+	<script href="themes/js/boostrap-dropdown_2-1-1.js"></script> -->
+
 	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.0/jquery.mobile.structure-1.4.0.min.css" />
 	<link rel="stylesheet" href="themes/jquery.mobile.icons.min.css" />
+
 	<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
 	<script src="http://code.jquery.com/mobile/1.4.0/jquery.mobile-1.4.0.min.js"></script>
 
@@ -118,8 +121,8 @@
 				<option value="sun">Recipient 20</option>
 				<option value="sun">Recipient 21</option>
 			</select>
-		</div>
-		<div class="section_div">
+		</div
+>		<div class="section_div">
 			<center>
 				Data
 			</center>
@@ -192,13 +195,12 @@
 		<div class="field_title" data-role="fieldcontain">
  			<fieldset data-role="controlgroup">
 				<label style="color: #DB5432; font: 15px/1 'Trebuchet MS', Arial;" for="checkbox-1">
-					Flag for Admin:
+					Flag for Admin
 				</label>
 				<input type="checkbox" name="checkbox-1" id="checkbox-1" class="custom" />
     		</fieldset>
 
-		</div>
- 
+		</div> 
 
 		<!-- <center>
 			<a rel="external" href="home.html" data-role="button" data-theme="b" data-inline="true">Save Changes
