Adding a second config file for reference and wasting time

--- a/pickupreport.html
+++ b/pickupreport.html
@@ -61,26 +61,26 @@
 		<div class="div_dim">
 			<select class="drop_button" name="volunteers" id="volunteers">
 				<option>Volunteer</option>
-				<option value="mon">Gretchen</option>
-				<option value="tue">Merk</option>
-				<option value="wed">Bawb</option>
-				<option value="thu">Hollah</option>
-				<option value="fri">Atcha</option>
-				<option value="sat">Yolohonda</option>
-				<option value="sun">Z</option>
+				<option value="1">Gretchen</option>
+				<option value="2">Merk</option>
+				<option value="3">Bawb</option>
+				<option value="4">Hollah</option>
+				<option value="5">Atcha</option>
+				<option value="6">Yolohonda</option>
+				<option value="7">Z</option>
 			</select>
 		</div>
 
 		<div class="div_dim">
 			<select class="drop_button" name="donor" id="donor">
 				<option>Donor</option>
-				<option value="mon">Donor 1</option>
-				<option value="tue">Donor 2</option>
-				<option value="wed">Donor 3</option>
-				<option value="thu">Donor 4</option>
-				<option value="fri">Donor 5</option>
-				<option value="sat">Donor 6</option>
-				<option value="sun">Donor 7</option>
+				<option value="1">Hall Fewds</option>
+				<option value="2">Whale Mart</option>
+				<option value="3">Targeh</option>
+				<option value="4">FWP</option>
+				<option value="5">Lambda</option>
+				<option value="6">U</option>
+				<option value="7">Queen Syndra</option>
 			</select>
 		</div>
 
@@ -99,27 +99,28 @@
 
 		<div class="div_dim">
 			<select class="drop_button" name="recipient" id="recipient">
-				<option value="mon">Recipient 1</option>
-				<option value="tue">Recipient 2</option>
-				<option value="wed">Recipient 3</option>
-				<option value="thu">Recipient 4</option>
-				<option value="fri">Recipient 5</option>
-				<option value="sat">Recipient 6</option>
-				<option value="sun">Recipient 7</option>
-				<option value="sun">Recipient 8</option>
-				<option value="sun">Recipient 9</option>
-				<option value="sun">Recipient 10</option>
-				<option value="sun">Recipient 11</option>
-				<option value="sun">Recipient 12</option>
-				<option value="sun">Recipient 13</option>
-				<option value="sun">Recipient 14</option>
-				<option value="sun">Recipient 15</option>
-				<option value="sun">Recipient 16</option>
-				<option value="sun">Recipient 17</option>
-				<option value="sun">Recipient 18</option>
-				<option value="sun">Recipient 19</option>
-				<option value="sun">Recipient 20</option>
-				<option value="sun">Recipient 21</option>
+				<option>Recipient</option>
+				<option value="1">Nice man</option>
+				<option value="2">Nice woman</option>
+				<option value="3">Grate</option>
+				<option value="4">Bulldawg</option>
+				<option value="5">Pit Bullz</option>
+				<option value="6">Sunshine</option>
+				<option value="7">Rainbows</option>
+				<option value="8">Doctors who need doctors</option>
+				<option value="9">Noice</option>
+				<option value="10">Reading 4 fun</option>
+				<option value="11">Transistor</option>
+				<option value="12">Leptons R Lyfe</option>
+				<option value="13">Bosons though</option>
+				<option value="14">Are pretty neat 2</option>
+				<option value="15">Like really Fermions</option>
+				<option value="16">And Bosons</option>
+				<option value="17">Are kewl</option>
+				<option value="18">Quarky</option>
+				<option value="19">Twerky</option>
+				<option value="20">md5sum</option>
+				<option value="21">Hungry me is hungry</option>
 			</select>
 		</div
 >		<div class="section_div">
@@ -135,13 +136,13 @@
 		<div class="div_dim">
 			<select style="" class="drop_button" name="produce" id="produce" >
 				<option>Produce</option>
-				<option value="mon">Produce 1</option>
-				<option value="tue">Produce 2</option>
-				<option value="wed">Produce 3</option>
-				<option value="thu">Produce 4</option>
-				<option value="fri">Produce 5</option>
-				<option value="sat">Produce 6</option>
-				<option value="sun">Produce 7</option>
+				<option value="1">Up</option>
+				<option value="2">Down</option>
+				<option value="3">Charm</option>
+				<option value="4">Strange</option>
+				<option value="5">Top</option>
+				<option value="6">Bottom</option>
+				<option value="7">Quarks</option>
 			</select>
 		</div>
 
@@ -162,26 +163,26 @@
 		<div class="div_dim">
 			<select class="drop_button" name="weighedwith" id="weighedwith">
 				<option>Weighed With</option>
-				<option value="mon">Option 1</option>
-				<option value="tue">Option 2</option>
-				<option value="wed">Option 3</option>
-				<option value="thu">Option 4</option>
-				<option value="fri">Option 5</option>
-				<option value="sat">Option 6</option>
-				<option value="sun">Option 7</option>
+				<option value="1">Scalar laplacian</option>
+				<option value="2">Han Solo</option>
+				<option value="3">The Easter Bunny</option>
+				<option value="4">The Power of Friendship</option>
+				<option value="5">True happiness</option>
+				<option value="6">Virgin Sacrifice</option>
+				<option value="7">Tears of a Lost Soul</option>
 			</select>
 		</div>
 
 		<div class="div_dim">
 			<select class="drop_button" name="transportedwith" id="transportedwith">
 				<option>Transported With</option>
-				<option value="mon">Option 1</option>
-				<option value="tue">Option 2</option>
-				<option value="wed">Option 3</option>
-				<option value="thu">Option 4</option>
-				<option value="fri">Option 5</option>
-				<option value="sat">Option 6</option>
-				<option value="sun">Option 7</option>
+				<option value="1">Quantum Tunneling</option>
+				<option value="2">The 10 Dimensions</option>
+				<option value="3">Syn</option>
+				<option value="4">X-Men</option>
+				<option value="5">Buddah</option>
+				<option value="6">A Magic Carpet Ride</option>
+				<option value="7">A Smile</option>
 			</select>
 		</div>
 
