Clearing up PUR

--- a/pickupreport.html
+++ b/pickupreport.html
@@ -122,8 +122,8 @@
 				<option value="20">md5sum</option>
 				<option value="21">Hungry me is hungry</option>
 			</select>
-		</div
->		<div class="section_div">
+		</div>		
+		<div class="section_div">
 			<center>
 				Data
 			</center>
@@ -194,12 +194,12 @@
 
 		</div>
 		<div class="field_title" data-role="fieldcontain">
- 			<fieldset data-role="controlgroup">
+			<fieldset data-role="controlgroup">
 				<label style="color: #DB5432; font: 15px/1 'Trebuchet MS', Arial;" for="checkbox-1">
 					Flag for Admin
 				</label>
 				<input type="checkbox" name="checkbox-1" id="checkbox-1" class="custom" />
-    		</fieldset>
+			</fieldset>
 
 		</div> 
 
