--- a/pickupreport.html
+++ b/pickupreport.html
@@ -29,6 +29,34 @@
 		margin: 12px; 
 		color: black;
 	}
+	div.inputdata{
+		border:thin solid gray;
+		padding:0.1em;
+		margin:0.1em;
+	}
+
+    div.inputdata label{
+	    float:left;
+	    margin-right:15px;
+	    /*padding:5px 0;*/
+	    /*color:gray;*/
+    }
+
+    div.inputdata span{
+	    display: block;
+	    overflow: hidden;
+    }
+
+    div.inputdata input{
+	    width:100%;
+	    /*padding-top:8px;*/
+	    border:none;
+	    background:none;
+    }
+
+    .clear {
+    	clear: both; 
+    }
 </style>
 <body>
 	<div data-role="page" id="pickup">  
@@ -189,17 +217,23 @@
 			<textarea cols="40" rows="8" name="textarea" id="textarea"></textarea>
 
 		</div>
-		<div class="field_title" data-role="fieldcontain">
- 			<fieldset data-role="controlgroup">
+		<!-- <div class="div_dim" data-role="fieldcontain">
+ 			<fieldset >
+ 				<input style="width: 13px;" type="checkbox" name="checkbox-1" id="checkbox-1" />
 				<label style="color: #DB5432; font: 15px/1 'Trebuchet MS', Arial;" for="checkbox-1">
 					Flag for Admin:
 				</label>
-				<input type="checkbox" name="checkbox-1" id="checkbox-1" class="custom" />
+				
     		</fieldset>
 
-		</div>
- 
+		</div> -->
 
+		<div class="field_title" data-role="fieldcontain">
+				<label style="color: #DB5432; font: 15px/1 'Trebuchet MS', Arial;" for="checkbox-1">
+					Flag for Admin:
+				</label>
+				<input style="width: 13px;" type="checkbox" name="checkbox-1" id="checkbox-1" />
+		</div>
 		<!-- <center>
 			<a rel="external" href="home.html" data-role="button" data-theme="b" data-inline="true">Save Changes
 			</a>
