--- a/pickupreport.html
+++ b/pickupreport.html
@@ -154,6 +154,8 @@
 		<div class="field_title" data-role="fieldcontain">
 			<label style="color: #DB5432; font: 15px/1 'Trebuchet MS', Arial;" for="name">Count:</label>
 			<input type="text" name="name" id="name" value=""  />
+			<label for="slider-fill">Input slider:</label>
+			<input type="range" name="slider-fill" id="slider-fill" value="60" min="0" max="100" data-highlight="true" />
 		</div>
 
 		<div class="field_title" data-role="fieldcontain">
@@ -161,7 +163,7 @@
 
 			<input type="text" name="name" id="name" value=""  />
 			<label for="slider-1">Input slider:</label>
-<input type="range" name="slider-1" id="slider-1" value="0" min="0" max="30" />
+			<input type="range" name="slider-1" id="slider-1" value="0" min="0" max="30" />
 		</div>
 		<div class="div_dim">
 			<select class="drop_button" name="weighedwith" id="weighedwith">
