A+ So pretty. Oh wow.

--- a/pickupreport.html
+++ b/pickupreport.html
@@ -155,7 +155,7 @@
 			<label style="color: #DB5432; font: 15px/1 'Trebuchet MS', Arial;" for="name">Count:</label>
 			<input type="text" name="name" id="name" value=""  />
 			<label for="slider-fill">Input slider:</label>
-			<input type="range" name="slider-fill" id="slider-fill" value="60" min="0" max="100" data-highlight="true" />
+			<input type="range" name="slider-fill" id="slider-fill" value="60" min="0" max="100" data-highlight="true" data-theme="f" data-track-theme="a"/>
 		</div>
 
 		<div class="field_title" data-role="fieldcontain">
