2 buttons. Heh buttons

--- a/pickupreport.html
+++ b/pickupreport.html
@@ -38,28 +38,28 @@
 		margin:0.1em;
 	}
 
-    div.inputdata label{
-	    float:left;
-	    margin-right:15px;
-	    /*padding:5px 0;*/
-	    /*color:gray;*/
-    }
+	div.inputdata label{
+		float:left;
+		margin-right:15px;
+		/*padding:5px 0;*/
+		/*color:gray;*/
+	}
 
-    div.inputdata span{
-	    display: block;
-	    overflow: hidden;
-    }
+	div.inputdata span{
+		display: block;
+		overflow: hidden;
+	}
 
-    div.inputdata input{
-	    width:100%;
-	    /*padding-top:8px;*/
-	    border:none;
-	    background:none;
-    }
+	div.inputdata input{
+		width:100%;
+		/*padding-top:8px;*/
+		border:none;
+		background:none;
+	}
 
-    .clear {
-    	clear: both; 
-    }
+	.clear {
+		clear: both; 
+	}
 </style>
 <body>
 	<div data-role="page" id="pickup">  
@@ -242,7 +242,7 @@
 					Flag for Admin:
 				</label>
 				<input style="width: 13px;" type="checkbox" name="checkbox-1" id="checkbox-1" />
-		</div> -->
+			</div> -->
 		<!-- <center>
 			<a rel="external" href="home.html" data-role="button" data-theme="b" data-inline="true">Save Changes
 			</a>
@@ -257,6 +257,17 @@
 				</span>
 			</a>
 		</div> 
+
+		<div class="div_dim">
+			<a rel="external" href="index.html" data-role="button" data-theme="d" data-inline="false">
+				<span class="ui-btn-inner ui-btn-corner-all">
+					<span class="ext_button">
+						Create Account
+					</span>
+				</span>
+			</a>
+		</div>
+		
 	</div>
 </div>
 </body>
