Wtf is going on...

--- a/signup.html
+++ b/signup.html
@@ -66,6 +66,26 @@
 						</span>
 					</a>
 				</div>
+
+				<div class="div_dim">
+			<a rel="external" href="home.html" data-role="button" data-theme="d" data-inline="false">
+				<span class="ui-btn-inner ui-btn-corner-all">
+					<span class="ext_button">
+						Save Changes
+					</span>
+				</span>
+			</a>
+		</div> 
+
+		<div class="div_dim">
+			<a rel="external" href="index.html" data-role="button" data-theme="d" data-inline="false">
+				<span class="ui-btn-inner ui-btn-corner-all">
+					<span class="ext_button">
+						Create Account
+					</span>
+				</span>
+			</a>
+		</div>
 		</form>  
 	</div>
 </body>
