--- a/forgotpassword.html
+++ b/forgotpassword.html
@@ -48,6 +48,48 @@
 				</span>
 			</a>
 		</div>  
+
+		<div data-position="fixed" data-role="header" data-theme="a">  
+			<!-- <a data-icon="home" data-iconpos="notext" rel="external" href="home.html">Home</a>  --> 
+			<h1 style="font:13px/1.5 'Trebuchet MS', Arial;">
+				Food Rescue Robot
+			</h1>  
+		</div> 
+		<div style="color: #4a4a4a; font:15px/1.5 'Trebuchet MS', Arial;">
+			<h1>
+				<center>
+					Create An Account
+				</center>
+			</h1>
+		</div>
+		<form id="HLogin" method="POST">  
+			<div style="margin: 15px;" data-role="fieldcontain">  
+				<label style="color: #4a4a4a; font:15px/1.5 'Trebuchet MS', Arial;" for="url">
+					<center>
+						Username:
+					</center>
+				</label>  
+				<input class="required" id="Lusername" name="uid_r" value="" type="text">
+			</div>  
+			<div style="margin: 15px;" data-role="fieldcontain">  
+				<label style="color: #4a4a4a; font:15px/1.5 'Trebuchet MS', Arial;" for="url"><center>Password:</center></label>  
+				<input id="Lpassword" name="pwd_r" value="" type="password">            
+			</div>  
+			<div style="margin: 15px;" data-role="fieldcontain">  
+				<label style="color: #4a4a4a; font:15px/1.5 'Trebuchet MS', Arial;" for="url"><center>Confirm Password:</center></label>  
+				<input id="Lpassword" name="pwd_r" value="" type="password">            
+			</div> 
+			<!-- <center><a rel="external" href="index.html" data-role="button" data-theme="b" data-inline="true">Create Account</a></center> -->
+			<div class="div_dim">
+				<a rel="external" href="index.html" data-role="button" data-theme="d" data-inline="false">
+					<span class="ui-btn-inner ui-btn-corner-all">
+						<span class="ext_button">
+							Create Account
+						</span>
+					</span>
+				</a>
+			</div>
+		</form>  
 	</div>
 </body>
 </html>
