OHMYG was it really the link this whole time?

--- a/index.html
+++ b/index.html
@@ -61,7 +61,13 @@
 					</span>
 				</a>
 				
-				<a style="font-weight: 200;" href="forgotpassword.html">Forgot Your Password?</a>
+				<a style="font-weight: 200;" href="forgotpassword.html" data-inline="false">
+					<span class="ui-btn-inner ui-btn-corner-all">
+						<span class="ui-btn-text">
+							Forgot Your Password?
+						</span>
+					</span>
+				</a>
 			</form> 
 		</div>  
 	</div>  
