--- a/forgotpassword.html
+++ b/forgotpassword.html
@@ -34,10 +34,14 @@
 		</div> 
 		<h1>Forgot Your Password</h1>
 		<form id="HLogin" method="POST">  
-			<div data-role="fieldcontain">  
-				<label for="url">Username:</label>  
-				<input class="required" id="Lusername" name="uid_r" value="" type="text">            
-			</div>  
+			<div style="margin: 15px;" data-role="fieldcontain">
+				<label style="color: #4a4a4a; font:15px/1.5 'Trebuchet MS', Arial;" for="url">
+					<center>
+						Username:
+					</center>
+				</label>  
+				<input class="required" id="Lusername" name="uid_r" value="" type="text">
+			</div>   
 
 			<div class="div_dim">
 				<a rel="external" href="index.html" data-role="button" data-theme="d" data-inline="false">
