The war is still ongoing

--- a/pickupreport.html
+++ b/pickupreport.html
@@ -229,7 +229,7 @@
 
 		<div class="field_title" data-role="fieldcontain">
 			<fieldset data-role="controlgroup">
-				<label style="color: #DB5432; font: 15px/1 'Trebuchet MS', Arial;" for="checkbox-1">
+				<label style="color: #DB5432; font: 15px/1 'Trebuchet MS', Arial; height: 20px;" for="checkbox-1">
 					Flag for Admin
 				</label>
 				<input type="checkbox" name="checkbox-1" id="checkbox-1" class="custom" />
