--- a/pickupreport.html
+++ b/pickupreport.html
@@ -230,8 +230,8 @@
 
 		<div class="field_title" data-role="fieldcontain">
 			<fieldset data-role="controlgroup">
-				<label style="color: #DB5432; font: 15px/1 'Trebuchet MS', Arial; height: 25px;" for="checkbox-1">
-					Flag for Admin
+				<label style="color: #DB5432; font: 15px/1 'Trebuchet MS', Arial; line-height: 150%; height: 25px;" for="checkbox-1">
+					<text style="top: 15px;">Flag for Admin</text>
 				</label>
 				<input type="checkbox" name="checkbox-1" id="checkbox-1" class="custom" />
 			</fieldset>
