--- a/signup.html
+++ b/signup.html
@@ -58,7 +58,7 @@
 			</div> 
 			<!-- <center><a rel="external" href="index.html" data-role="button" data-theme="b" data-inline="true">Create Account</a></center> -->
 			<div class="div_dim">
-				<a rel="external" href="index.html" data-role="button" data-theme="d" data-inline="false">
+			<a rel="external" href="index.html" data-role="button" data-theme="e" data-inline="false">
 					<span class="ui-btn-inner ui-btn-corner-all">
 						<span class="ext_button">
 							Create Account
