--- a/pickupreport.html
+++ b/pickupreport.html
@@ -250,7 +250,7 @@
 		</center> -->
 
 		<div class="div_dim">
-			<a rel="external" href="home.html" data-role="button" data-theme="e" data-inline="false">
+			<a rel="external" href="home.html" data-role="button" data-theme="d" data-inline="false">
 				<span class="ui-btn-inner ui-btn-corner-all">
 					<span class="ext_button">
 						Save Changes
