This is Thursday Afternoon

--- a/home.html
+++ b/home.html
@@ -28,7 +28,7 @@
 	<div data-role="page" id="home">  
 		<div data-position="fixed" data-role="header" data-theme="a">  
 			<a style="background-color: rgba(75,115,51,0);" rel="external" data-icon="home" data-iconpos="notext" href="home.html">Home</a>  
-			<h1 style="font:13px/1.5 'Trebuchet MS', Arial;">
+			<h1 style="font:13px/1.5 'Trebuchet MS' bold, Arial;">
 				Food Rescue Robot
 			</h1> 
 
