--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	<div data-role="page" id="home">  
 		<div data-position="fixed" data-role="header" data-theme="a">  
 			<!-- <a data-icon="home" data-iconpos="notext" rel="external" href="home.html">Home</a>  --> 
-			<h1 style="font:13px/1.5 'Trebuchet MS', Arial;">
+			<h1 style="font:13px/1.5 'Trebuchet MS' bold, Arial;">
 				Food Rescue Robot
 			</h1>  
 		</div>  
