--- a/routes.html
+++ b/routes.html
@@ -63,7 +63,7 @@
 			<a style="background-color: rgba(75,115,51,0);" rel="external"data-icon="home" data-iconpos="notext" href="home.html">
 				Home
 			</a>  
-			<h1 style="font:13px/1.5 'Trebuchet MS', Arial;">
+			<h1 style="font:13px/1.5 'Trebuchet MS' bold, Arial;">
 				Food Rescue Robot
 			</h1> 
 			<a style="background-color: rgba(75,115,51,0);" rel="external"data-icon="power" data-iconpos="notext" href="index.html">
