--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 	<script type="text/javascript" src="http://dev.jtsage.com/cdn/datebox/latest/jqm-datebox.core.min.js"></script>
 	<script type="text/javascript" src="http://dev.jtsage.com/cdn/datebox/latest/jqm-datebox.mode.flipbox.min.js"></script>
 	<script type="text/javascript" src="http://dev.jtsage.com/cdn/datebox/i18n/jquery.mobile.datebox.i18n.en_US.utf8.js"></script>
+
+	<script type="text/javascript" src="js/index.js"></script>
+	
 </head>
 <body>
 	<div data-role="page" id="home">  
@@ -52,7 +55,7 @@
 						</span>
 					</a>
 				</div>
-		
+				
 				<a style="font-weight: 200;" href="signup.html" data-inline="false">
 					<span class="ui-btn-inner ui-btn-corner-all">
 						<span class="ui-btn-text">
