--- a/index.html
+++ b/index.html
@@ -23,12 +23,9 @@
 	<script type="text/javascript" src="http://dev.jtsage.com/cdn/datebox/latest/jqm-datebox.core.min.js"></script>
 	<script type="text/javascript" src="http://dev.jtsage.com/cdn/datebox/latest/jqm-datebox.mode.flipbox.min.js"></script>
 	<script type="text/javascript" src="http://dev.jtsage.com/cdn/datebox/i18n/jquery.mobile.datebox.i18n.en_US.utf8.js"></script>
-
-	<script type="text/javascript" src="js/index.js"></script>
-	
 </head>
 <body>
-	<div data-role="page" id="home">  
+	<div data-role="page" id="reposHome">  
 		<div data-position="fixed" data-role="header" data-theme="a">  
 			<!-- <a data-icon="home" data-iconpos="notext" rel="external" href="home.html">Home</a>  --> 
 			<h1 style="font:13px/1.5 'Trebuchet MS' bold, Arial;">
@@ -55,7 +52,7 @@
 						</span>
 					</a>
 				</div>
-				
+		
 				<a style="font-weight: 200;" href="signup.html" data-inline="false">
 					<span class="ui-btn-inner ui-btn-corner-all">
 						<span class="ui-btn-text">
@@ -73,6 +70,16 @@
 				</a>
 			</form> 
 		</div>  
-	</div>  
+
+        <div data-role="header" data-position="fixed">
+            <h1>GitHub Search</h1>
+        </div>
+        <div data-role="content">
+            <ul id="allRepos" data-role="listview" data-filter="true">
+            </ul>
+        </div>
+    </div>
+
+    <script type="text/javascript" src="js/index.js"></script>
 </body>
 </html>
