--- a/index.html
+++ b/index.html
@@ -71,15 +71,17 @@
 			</form> 
 		</div>  
 
-        <div data-role="header" data-position="fixed">
-            <h1>GitHub Search</h1>
-        </div>
+        
+		<h4>GitHub Test Search Filter</h4>
+        
         <div data-role="content">
             <ul id="allRepos" data-role="listview" data-filter="true">
             </ul>
         </div>
     </div>
 
+
+    <!-- End of page so it gets loaded last -->
     <script type="text/javascript" src="js/index.js"></script>
 </body>
 </html>
