--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8">
@@ -24,7 +24,7 @@
 	<script type="text/javascript" src="http://dev.jtsage.com/cdn/datebox/latest/jqm-datebox.mode.flipbox.min.js"></script>
 	<script type="text/javascript" src="http://dev.jtsage.com/cdn/datebox/i18n/jquery.mobile.datebox.i18n.en_US.utf8.js"></script>
 </head>
-<body>
+<body onload="init()">
 	<div data-role="page" id="reposHome">  
 		<div data-position="fixed" data-role="header" data-theme="a">  
 			<!-- <a data-icon="home" data-iconpos="notext" rel="external" href="home.html">Home</a>  --> 
@@ -35,20 +35,20 @@
 		<div data-role="content" id="contentConfirmation" name="contentConfirmation" align="center">  
 			<h1 style="color: #4a4a4a; font:30px/1.5 'Trebuchet MS', Arial;">Log In</h1>  
 			<form id="loginForm" method="POST">  
-				<div data-role="fieldcontain">  
+				<!-- <div data-role="fieldcontain">  
 					<label style="color: #4a4a4a; font:15px/1.5 'Trebuchet MS', Arial;" for="url">Username:</label>  
 					<input class="required" id="Lusername" name="uid_r" value="" type="text">            
-				</div>  
+				</div>  --> 
 
 				<div data-role="fieldcontain" class="ui-hide-label">
 					<label for="email">Email:</label>
 					<input type="text" name="email" id="email" value="" placeholder="Email" />
 				</div>
 
-				<div data-role="fieldcontain">  
+				<!-- <div data-role="fieldcontain">  
 					<label style="color: #4a4a4a; font:15px/1.5 'Trebuchet MS', Arial;" for="url">Password:</label>  
 					<input id="Lpassword" name="pwd_r" value="" type="password">            
-				</div> 
+				</div>  -->
 
 				<div data-role="fieldcontain" class="ui-hide-label">
 					<label for="password">Password:</label>
@@ -66,23 +66,26 @@
 				</div>
 
 				<input type="submit" value="Login" id="submitButton">
-
-				<a style="font-weight: 200;" href="signup.html" data-inline="false">
-					<span class="ui-btn-inner ui-btn-corner-all">
-						<span class="ui-btn-text">
-							Sign Up
-						</span>
-					</span>
-				</a>
-				
-				<a style="font-weight: 200;" href="forgotpassword.html" data-inline="false">
-					<span class="ui-btn-inner ui-btn-corner-all">
-						<span class="ui-btn-text">
-							Forgot Your Password?
-						</span>
-					</span>
-				</a>
+				<!-- <button onclick="myFunction()">Try it</button>
+				<button onclick="deviceReady()">What</button> -->
 			</form> 
+			
+			<a style="font-weight: 200;" href="signup.html" data-inline="false">
+				<span class="ui-btn-inner ui-btn-corner-all">
+					<span class="ui-btn-text">
+						Sign Up
+					</span>
+				</span>
+			</a>
+			
+			<a style="font-weight: 200;" href="forgotpassword.html" data-inline="false">
+				<span class="ui-btn-inner ui-btn-corner-all">
+					<span class="ui-btn-text">
+						Forgot Your Password?
+					</span>
+				</span>
+			</a>
+			
 		</div> 
 
 		
@@ -111,5 +114,10 @@
 
 	<!-- End of page so it gets loaded last -->
 	<script type="text/javascript" src="js/index.js"></script>
+	<script>
+		// function myFunction() {
+		// 	alert("Hello! I am an alert box!");
+		// }
+	</script>
 </body>
 </html>
