--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 				</div>
 
 				<input type="submit" value="Login" id="submitButton">
-				<!-- <button onclick="myFunction()">Try it</button>
-				<button onclick="deviceReady()">What</button> -->
+				<button onclick="myFunction()">Try it</button>
+				<button onclick="deviceReady()">What</button>
 			</form> 
 			
 			<a style="font-weight: 200;" href="signup.html" data-inline="false">
