Adding Routes from DB

--- a/home.html
+++ b/home.html
@@ -24,24 +24,25 @@
 	<script type="text/javascript" src="http://dev.jtsage.com/cdn/datebox/latest/jqm-datebox.mode.flipbox.min.js"></script>
 	<script type="text/javascript" src="http://dev.jtsage.com/cdn/datebox/i18n/jquery.mobile.datebox.i18n.en_US.utf8.js"></script>
     <script>
-        $(function () {
-            //$('.employee').unbind().on("click", function () {
-            $("a").on("click", function (y) {
-                //disable the button so we can't resubmit while we wait
-                $.ajax({
-                    type: "GET",
-                    url: "http://dev.boulderfoodrescue.org/logs/mine_past.json",
-                    data: {volunteer_email: window.sessionStorage.email, volunteer_token: window.sessionStorage.token},
-                    success: function (data) {
-                        var minePastData =  data;
+    //     $(function () {
+    //         //$('.employee').unbind().on("click", function () {
+    //         $("a").on("click", function (y) {
+    //             //disable the button so we can't resubmit while we wait
+    //             $.ajax({
+    //                 type: "GET",
+    //                 url: "http://dev.boulderfoodrescue.org/logs/mine_upcoming.json",
+    //                 data: {volunteer_email: window.sessionStorage.email, volunteer_token: window.sessionStorage.token},
+    //                 success: function (data) {
+    //                 	alert(JSON.stringify(data));
+    //                     var minePastData =  data;
                
-                    },
-                    error: function (msg) {
-                        alert( msg );
-                    }
-                });
-            });
-        });
+    //                 },
+    //                 error: function (msg) {
+    //                     alert( msg );
+    //                 }
+    //             });
+    //         });
+    //     });
         
     </script>
 </head>
